vlib/v/parser/tests/defer_return2.vv
fn test1() int {
	defer {
		return 12
	}
	a := 3
	return a
}

fn main() {
	x := test1()
	println(x)
}
